// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid.html - parse5-verify 1`] = `
---
    invalid:
invalid:
---



<html><head></head><body></body></html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
    invalid:
invalid:
---

<html>
  <head></head>
  <body></body>
</html>

`;

exports[`yaml.html - parse5-verify 1`] = `
---
hello:     world
---






<html><head></head><body></body></html>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
hello: world
---

<html>
  <head></head>
  <body></body>
</html>

`;
